# Kiebitz

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: launch.json
.github/workflows/: ci.yml  release.yml
docs/: DEPLOYMENT.md  ROADMAP.md
scripts/: release.ps1
src/: App.test.tsx  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/resources/stockfish/: NOTICE.txt
src-tauri/src/: analysis.rs  chess.rs  chessdb.rs  db.rs  endgame.rs  engine.rs  lib.rs  live.rs  puzzles.rs  repertoire.rs  settings.rs  study.rs  sync.rs  updater.rs
src/components/: Board.tsx  LiveEngine.tsx  StudyPlanner.tsx  chartTheme.tsx  ui.test.tsx  ui.tsx
src/data/: demo.ts  endgames.ts
src/lib/: analysis.ts  backend.ts  changes.ts  coach.ts  db.ts  endgame.ts  ext.ts  gameUi.test.ts  gameUi.ts  i18n.tsx  importer.test.ts  importer.ts  pgn.test.ts  pgn.ts  puzzles.ts  repertoire.ts  settings.ts  stats.test.ts  stats.ts  study.ts  sync.ts  syncManager.test.ts  syncManager.ts  updater.ts  util.test.ts  util.ts
src/pages/: Analysis.test.tsx  Analysis.tsx  Dashboard.test.tsx  Dashboard.tsx  Endgame.tsx  Games.test.tsx  Games.tsx  Insights.tsx  InsightsV2.test.tsx  InsightsV2.tsx  Puzzles.tsx  Repertoire.tsx  Settings.tsx  Study.test.tsx  Study.tsx
