[package]
name = "kiebitz"
# Hinweis: Die angezeigte App-Version kommt aus tauri.conf.json, nicht von hier.
version = "0.1.1"
description = "Kiebitz — local-first desktop chess companion"
authors = ["Torim98"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
# Auto-Update über GitHub Releases; unterstützt nur Desktop — bei einem
# späteren Mobile-Build (Phase 4) hinter ein target-cfg ziehen.
tauri-plugin-updater = "2"
# Öffnet externe Links im System-Standardbrowser (Desktop).
tauri-plugin-opener = "2"
rusqlite = { version = "0.33", features = ["bundled"] }
shakmaty = "0.27.3"
csv = "1.4.0"
ureq = "2"
zstd = "0.13.3"
