[package]
name = "kiebitz"
# Hinweis: Die angezeigte App-Version kommt aus tauri.conf.json, nicht von hier.
version = "0.1.1"
description = "Kiebitz — local-first desktop chess companion"
authors = ["Torim98"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
# Öffnet externe Links im System-Standardbrowser (auch Mobile-tauglich).
tauri-plugin-opener = "2"
rusqlite = { version = "0.33", features = ["bundled"] }
shakmaty = "0.27.3"
csv = "1.4.0"
ureq = "2"
zstd = "0.13.3"
# Sync-Server (Desktop als Hub) — bewusst minimal, kein async-Stack.
tiny_http = "0.12"

# Auto-Update über GitHub Releases — nur Desktop. Mobile aktualisiert über
# Store/Sideload; updater.rs stellt dort Stub-Commands bereit.
# qrcode: erzeugt den Pairing-QR (Desktop-Hub zeigt ihn, das Handy scannt).
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
qrcode = { version = "0.14", default-features = false }

# QR-Scanner (nur Mobile): das Handy liest den Pairing-QR des Desktops per Kamera.
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"
